--- a/cross-chain-interactions/hyperlane/messages/tsconfig.json
+++ b/cross-chain-interactions/hyperlane/messages/tsconfig.json
@@ -1,44 +1,38 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
+  // Visit https://aka.ms/tsconfig for more info
   "compilerOptions": {
-    // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
-
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "esnext",
-    "types": [],
-    // For nodejs:
-    // "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
-
-    // Other Outputs
+    // File layout
+    "outDir": "./dist",
+    // Environment
+    "target": "ES2022", // modern features, Node 20+ safe
+    "module": "CommonJS", // backend default
+    "moduleResolution": "node16", // modern Node resolution
+    "lib": [
+      "ES2022"
+    ],
+    "types": [
+      "node"
+    ],
+    // Outputs
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-
-    // Stricter Typechecking Options
+    // Strictness
+    "strict": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-
-    // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
+    // Module / import style
+    "esModuleInterop": true,
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
+    // Performance & consistency
     "skipLibCheck": true,
-  }
+    "forceConsistentCasingInFileNames": true,
+    // Deprecation handling
+    "ignoreDeprecations": "6.0"
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
