--- a/cross-chain-interactions/hyperlane/messages/backend/api/package.json
+++ b/cross-chain-interactions/hyperlane/messages/backend/api/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "dev": "ts-node-dev --respawn src/index.ts",
+        "dev": "node --loader ts-node/esm --watch src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js"
     },
