--- a/cross-chain-interactions/hyperlane/messages/backend/api/package.json
+++ b/cross-chain-interactions/hyperlane/messages/backend/api/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "dotenv": "^16.6.1",
+        "ethers": "^6.15.0",
         "express": "^4.21.2",
         "pg": "^8.11.5"
     },
