--- a/cross-chain-interactions/hyperlane/messages/backend/api/package.json
+++ b/cross-chain-interactions/hyperlane/messages/backend/api/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@types/express": "^4.17.23",
         "@types/node": "^20.19.19",
+        "@types/pg": "^8.15.5",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.3"
     }
