--- a/solana/openrate/Anchor.toml
+++ b/solana/openrate/Anchor.toml
@@ -14,6 +14,10 @@ url = "https://api.apr.dev"
 cluster = "Localnet"
 wallet = "/home/settorka/.config/solana/id.json"
 
+[test]
+startup_wait = 20000
+
+
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 
