--- a/solana/openrate/programs/openrate/Cargo.toml
+++ b/solana/openrate/programs/openrate/Cargo.toml
@@ -13,8 +13,11 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
-default = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+default = []
+custom-heap = []
+custom-panic = []
+anchor-debug = []
 
 
 [dependencies]
