Openrate: on-chain lending and borrowing  (#4)
* scaffolding for open rate implementation

* updated crate for anchor spl and lang deps

* cargo lock update

* sync with anchor runtime

* state implementation

* 0.31.1 update for anchor, spl, rust

* market instructions implementation

* refactored borrow service file

* refactor due to deprecated borrow checker access

* updated test file init

* successful test

* market lifecycle init test, needs work

* test restructure

* cleaned up for potential prod deployment

* readme added, license pending

* Create LICENSE

--- a/solana/openrate/Anchor.toml
+++ b/solana/openrate/Anchor.toml
@@ -14,5 +14,13 @@ url = "https://api.apr.dev"
 cluster = "Localnet"
 wallet = "/home/settorka/.config/solana/id.json"
 
+[test]
+startup_wait = 20000
+
+
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+
+[programs.devnet]
+openrate = "7baz5aqHG5CUPqpsavhXDgTmHkYgKVthDuuFkT3Fbdt9"
