--- a/solana/openrate/programs/openrate/Cargo.toml
+++ b/solana/openrate/programs/openrate/Cargo.toml
@@ -13,7 +13,13 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
+custom-heap = []
+custom-panic = []
+anchor-debug = []
+
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
