--- a/ethereum/mev-relay/.env
+++ b/ethereum/mev-relay/.env
@@ -9,5 +9,5 @@ BUILDER_PORT=50052
 DATABASE_URL=postgres://postgres:postgres@timescaledb:5432/mevrelay?sslmode=disable
 
 # Nodes
-ANVIL_RPC=http://anvil:8545
+ANVIL_RPC=http://geth:8545
 GETH_RPC=http://geth:8545
