--- a/ethereum/txpool-builder/infra/docker-compose.yml
+++ b/ethereum/txpool-builder/infra/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   geth:
     build:
@@ -22,8 +23,8 @@ services:
 
   builder:
     build:
-      context: ./docker
-      dockerfile: Dockerfile.builder
+      context: ../        
+      dockerfile: infra/docker/Dockerfile.builder
     container_name: txpool-builder
     depends_on:
       - geth
