--- a/ethereum/txpool-builder/infra/docker-compose.yml
+++ b/ethereum/txpool-builder/infra/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   geth:
     build:
@@ -17,13 +18,16 @@ services:
       - "8545:8545"
     volumes:
       - geth_data:/root/.ethereum
+      - ./docker/seed_txpool.sh:/root/seed_txpool.sh
     networks:
       - buildernet
+    entrypoint: ["/bin/sh", "-c", "geth $@ & sleep 10 && sh /root/seed_txpool.sh", "--"]
+
 
   builder:
     build:
-      context: ./docker
-      dockerfile: Dockerfile.builder
+      context: ../        
+      dockerfile: infra/docker/Dockerfile.builder
     container_name: txpool-builder
     depends_on:
       - geth
